dnsmasq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: dnsmasq
  name: dnsmasq
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: dnsmasq
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/main: "true"
        io.kompose.service: dnsmasq
    spec:
      containers:
        - image: opensase_dnsmasq:latest
          name: dnsmasq
          ports:
            - containerPort: 53
            - containerPort: 53
              protocol: UDP
          resources: {}
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          volumeMounts:
            - mountPath: /data
              name: data
      hostname: dnsmasq
      restartPolicy: Always
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
status: {}
