openvpn-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: openvpn
  name: openvpn
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: openvpn
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/main: "true"
        io.kompose.service: openvpn
    spec:
      containers:
        - image: opensase_openvpn:latest
          name: openvpn
          ports:
            - containerPort: 1194
              protocol: UDP
          resources: {}
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          volumeMounts:
            - mountPath: /data
              name: data
            - mountPath: /data-priv
              name: openvpn-priv
      hostname: openvpn
      restartPolicy: Always
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
        - name: openvpn-priv
          persistentVolumeClaim:
            claimName: openvpn-priv
status: {}
