cicap-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: cicap
  name: cicap
spec:
  ports:
    - name: "1344"
      port: 1344
      targetPort: 1344
  selector:
    io.kompose.service: cicap
status:
  loadBalancer: {}
