clamav-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: clamav
  name: clamav
spec:
  ports:
    - name: "3310"
      port: 3310
      targetPort: 3310
  selector:
    io.kompose.service: clamav
status:
  loadBalancer: {}
