openvpn-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: openvpn
  name: openvpn
spec:
  ports:
    - name: "5443"
      port: 5443
      protocol: UDP
      targetPort: 1194
  selector:
    io.kompose.service: openvpn
status:
  loadBalancer: {}
