squid-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: squid
  name: squid
spec:
  ports:
    - name: "3128"
      port: 3128
      targetPort: 3128
    - name: "3129"
      port: 3129
      targetPort: 3129
    - name: "3130"
      port: 3130
      targetPort: 3130
  selector:
    io.kompose.service: squid
status:
  loadBalancer: {}
